[project]
name = "maim_message"
version = "0.7.4"
description = "A message handling library with Socket.IO support"
authors = [{ name = "tcmofashi" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
    "aiohttp>=3.8.0",
    "pydantic>=1.9.0",
    "python-socketio>=5.0.0",
    "cryptography",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
